--- a/Client/src/app/main/main.page.html
+++ b/Client/src/app/main/main.page.html
@@ -26,7 +26,7 @@
 
 <ion-content>
   <ion-grid style="height: 100%;">
-    <ion-row style="background-color: goldenrod; min-height: 100%;">
+    <ion-row style="background-color: #DCDCDC; min-height: 100%;">
       <ion-col>
         <app-groups-list (customEvent)="onCustomEvent($event)"></app-groups-list>
       </ion-col>
