--- a/Client/src/app/main/main.page.scss
+++ b/Client/src/app/main/main.page.scss
@@ -28,7 +28,7 @@
 }
 
 ion-content {
-  --ion-background-color: #DBA032; /* Set the desired background color */
+  --ion-background-color: #DCDCDC; /* Set the desired background color */
 }
 
 
