--- a/Client/src/app/chat-admin-modal/chat-admin-modal.component.html
+++ b/Client/src/app/chat-admin-modal/chat-admin-modal.component.html
@@ -1,9 +1,13 @@
 <ion-header>
   <ion-toolbar class="custom-toolbar">
-    <ion-buttons slot="start">
-      <ion-button>
+    <ion-buttons *ngIf="admin" slot="start">
+      <ion-button (click)="pendingReq()" *ngIf="this.httpRequestsService.groupsData[this.groupName]['pending'].length===0" disabled="true">
         <ion-icon name="notifications-outline"></ion-icon>
-        <ion-badge slot="end">10</ion-badge>
+        <ion-badge slot="end">{{this.httpRequestsService.groupsData[this.groupName]['pending'].length}}</ion-badge>
+      </ion-button>
+      <ion-button (click)="pendingReq()" *ngIf="this.httpRequestsService.groupsData[this.groupName]['pending'].length!==0">
+        <ion-icon name="notifications-outline"></ion-icon>
+        <ion-badge slot="end">{{this.httpRequestsService.groupsData[this.groupName]['pending'].length}}</ion-badge>
       </ion-button>
     </ion-buttons>
     <ion-buttons slot="end">
@@ -15,30 +19,21 @@
 </ion-header>
 <ion-content>
   <ion-grid>
-    <ion-row class="invite-users-row">
+    <ion-row *ngIf="admin" class="invite-users-row">
       <ion-col offset="1" size="8">
-        <ion-select fill="solid" label="Invite users" label-placement="floating" [multiple]="true">
-          <ion-select-option value="apple">Apple</ion-select-option>
-          <ion-select-option value="banana">Banana</ion-select-option>
-          <ion-select-option value="orange">Orange</ion-select-option>
-          <ion-select-option value="orange">Orange</ion-select-option>
-          <ion-select-option value="orange">Orange</ion-select-option>
-          <ion-select-option value="orange">Orange</ion-select-option>
-          <ion-select-option value="orange">Orange</ion-select-option>
-          <ion-select-option value="orange">Orange</ion-select-option>
-          <ion-select-option value="orange">Orange</ion-select-option>
-          <ion-select-option value="orange">Orange</ion-select-option>
-          <ion-select-option value="orange">Orange</ion-select-option>
-          <ion-select-option value="orange">Orange</ion-select-option>
-          <ion-select-option value="orange">Orange</ion-select-option>
-          <ion-select-option value="orange">Orange</ion-select-option>
-          <ion-select-option value="orange">Orange</ion-select-option>
-          <ion-select-option value="orange">Orange</ion-select-option>
-          <ion-select-option value="orange">Orange</ion-select-option>
+        <ion-select fill="solid" label="Invite users" label-placement="floating" [(ngModel)]="selectedUser">
+          <ng-container *ngFor="let username of httpRequestsService.allUsers">
+            <ion-select-option *ngIf="isUserInGroup(username)" value="{{username}}">
+              {{username}}
+            </ion-select-option>
+          </ng-container>
         </ion-select>
       </ion-col>
       <ion-col size="2">
-        <ion-button>
+        <ion-button *ngIf="selectedUser!==''" (click)="addUser()">
+          <ion-icon name="person-add-outline"></ion-icon>
+        </ion-button>
+        <ion-button *ngIf="selectedUser===''" disabled="true">
           <ion-icon name="person-add-outline"></ion-icon>
         </ion-button>
       </ion-col>
@@ -46,41 +41,11 @@
     <ion-row class="group-users-rows">
       <ion-col>
         <ion-list [inset]="true">
-          <ion-item>
-            <ion-label>Pokémon Yellow</ion-label>
-          </ion-item>
-          <ion-item>
-            <ion-label>Mega Man X</ion-label>
-          </ion-item>
-          <ion-item>
-            <ion-label>The Legend of Zelda</ion-label>
-          </ion-item>
-          <ion-item>
-            <ion-label>Pac-Man</ion-label>
-          </ion-item>
-          <ion-item>
-            <ion-label>Super Mario World</ion-label>
-          </ion-item>
-          <ion-item>
-            <ion-label>Super Mario World</ion-label>
-          </ion-item>
-          <ion-item>
-            <ion-label>Super Mario World</ion-label>
-          </ion-item>
-          <ion-item>
-            <ion-label>Super Mario World</ion-label>
-          </ion-item>
-          <ion-item>
-            <ion-label>Super Mario World</ion-label>
-          </ion-item>
-          <ion-item>
-            <ion-label>Super Mario World</ion-label>
-          </ion-item>
-          <ion-item>
-            <ion-label>Super Mario World</ion-label>
-          </ion-item>
-          <ion-item>
-            <ion-label>Super Mario World</ion-label>
+          <ion-item *ngFor="let user of iterableUsers">
+            <ion-label>{{user.username}}</ion-label>
+            <p *ngIf="user.role === '2'">Owner</p>
+            <p *ngIf="user.role === '1'">Administrator</p>
+            <p *ngIf="user.role === '0'">Member</p>
           </ion-item>
         </ion-list>
       </ion-col>
