--- a/Client/src/app/chat-screen/chat-screen.component.html
+++ b/Client/src/app/chat-screen/chat-screen.component.html
@@ -5,6 +5,9 @@
         <ion-icon name="person-circle-outline"></ion-icon>
         <span>Admin</span>
       </ion-button>
+      <ion-button class="custom-toolbar-button" style="margin-left: 5px;" (click)="refreshChat()">
+        <ion-icon name="refresh-outline"></ion-icon>
+      </ion-button>
     </ion-buttons>
     <ion-title style="text-align: center;">
       {{groupName}}
@@ -15,11 +18,23 @@
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
-  <ion-grid style="background-color: #489751; width: 100%; overflow: auto; max-height: 70vh;">
+  <ion-grid style="background-color: #19A7CE; width: 100%; overflow: auto; max-height: 70vh;">
     <h1 *ngIf="messages2.length === 0"></h1>
-    <ion-row *ngFor="let message of iterableMessages" style="background-color: #337D3B;">
+    <ion-row *ngFor="let message of iterableMessages" style="background-color: #19A7CE;">
       <ion-col size="10">
-        <ion-item>
+        <ion-item *ngIf="message.sender === 'Admin'"  style="background-color: red;">
+          <ion-label class="item-label">
+            <h2>{{ message.sender }}</h2>
+            <p>{{ message.content }}</p>
+          </ion-label>
+        </ion-item>
+        <ion-item *ngIf="message.sender === this.httpRequestsService.loggedUsername"  style="background-color: blue;">
+          <ion-label class="item-label">
+            <h2>{{ message.sender }}</h2>
+            <p>{{ message.content }}</p>
+          </ion-label>
+        </ion-item>
+        <ion-item *ngIf="message.sender !== 'Admin' && message.sender !== this.httpRequestsService.loggedUsername"  style="background-color: yellow;">
           <ion-label class="item-label">
             <h2>{{ message.sender }}</h2>
             <p>{{ message.content }}</p>
