--- a/Client/src/app/chat-screen/chat-screen.component.scss
+++ b/Client/src/app/chat-screen/chat-screen.component.scss
@@ -29,7 +29,7 @@ ion-item{
 }
 
 ion-toolbar.header-toolbar {
-  --background: #1A5921;
+  --background: #146c94;
 }
 
 ion-toolbar.footer-toolbar {
@@ -38,7 +38,7 @@ ion-toolbar.footer-toolbar {
 }
 
 .container {
-  background-color: #5FB268;
+  background-color: #19A7CE;
   display: flex;
   flex-direction: column;
   min-height: 100%; /* Set the desired minimum height */
